<resources>
    <string name="app_name">Shrimps</string>
    <string name="folder_name">Shrimps-images</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="image_name">Image name</string>
    <string-array name="palette_array">
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>
    <string name="title_activity_list_images">ListImagesActivity</string>


    <string name="camera_menu_op">Cámara</string>
    <string name="label_menu_op">Etiquetado</string>
    <string name="turnoff_rasp_btn">Apagar\nRaspberry</string>
    <string name="restart_rasp_btn">Reiniciar\nRaspberry</string>
    <string name="take_photo_btn">Tomar foto</string>

    <string name="brightness_config">Brillo(64|-64)</string>
    <string name="contrast_config">Contraste(0|30)</string>
    <string name="saturation_config">Saturación(127|0)</string>
    <string name="gamma_config">Gamma(250|20)</string>
    <string name="white_balance_config">WB(6500|2800)</string>
    <string name="exposure_config">Exposición(5000|0)</string>
    <string name="save_config_btn">Guardar cambios</string>


</resources>
